# examples

./: .gitignore
cpp/callback/std_callback/: CMakeLists.txt
cpp/callback/std_callback/include/: EventHandler.h  TestClass.h
cpp/callback/std_callback/src/: EventHandler.cpp  Main.cpp  TestClass.cpp
cpp/crosscompile/: hello
cpp/glibc_version/: glibc_version  glibc_version.c  make.sh
cpp/gtest/: CMakeLists.txt
cpp/headers_classes/: CMakeLists.txt
cpp/headers_classes/1_standard/: CMakeLists.txt
cpp/headers_classes/1_standard/src/: Main.cpp
cpp/headers_classes/2_header/: CMakeLists.txt
cpp/headers_classes/2_header/include/: Main.h
cpp/headers_classes/2_header/src/: Main.cpp
cpp/headers_classes/3_standard_class/: CMakeLists.txt
cpp/headers_classes/3_standard_class/src/: Main.cpp
cpp/headers_classes/4_header_class/: CMakeLists.txt
cpp/headers_classes/4_header_class/include/: Main.h
cpp/headers_classes/4_header_class/src/: Main.cpp
cpp/headers_classes/5_separate_class/: CMakeLists.txt
cpp/headers_classes/5_separate_class/include/: Class.h
cpp/headers_classes/5_separate_class/src/: Class.cpp  Main.cpp
cpp/headers_classes/6_nested_classes/: CMakeLists.txt
cpp/headers_classes/6_nested_classes/src/: foo.h  main.cpp
cpp/headers_classes/7_pass_classes/: CMakeLists.txt
cpp/headers_classes/7_pass_classes/src/: ex3.cpp  foo.cpp  foo.h  subFoo.cpp  subFoo.h
cpp/headers_classes/8_poly_classes/: CMakeLists.txt
cpp/headers_classes/8_poly_classes/include/: Circle.h  Rectangle.h  Shape.h
cpp/headers_classes/8_poly_classes/src/: Circle.cpp  Main.cpp  Rectangle.cpp  Shape.cpp
cpp/headers_classes/files/: CMakeLists.txt
cpp/headers_classes/files/src/: Main.cpp
cpp/headers_classes/scripts/: batch.sh
cpp/optimized_strings/version1/: CMakeLists.txt
cpp/optimized_strings/version1/src/: Main.cpp
cpp/optimized_strings/version2/: CMakeLists.txt
cpp/optimized_strings/version2/src/: Main.cpp
cpp/singletons/: CMakeLists.txt  MOOSSimInterface.cpp  MOOSSimInterface.h
cpp/sockets/tcp/: CMakeLists.txt
cpp/sockets/tcp/src/: client.cpp  server.cpp
cpp/sockets/udp/: CMakeLists.txt
cpp/sockets/udp/src/: udp_client.cpp  udp_client_broadcast.cpp  udp_server.cpp  udp_server_broadcast.cpp
cpp/templates/: CMakeLists.txt
cpp/templates/1_functions/: CMakeLists.txt
cpp/templates/1_functions/src/: Main.cpp
cpp/templates/2_classes/: CMakeLists.txt
cpp/templates/2_classes/include/: Pair.h  Sequence.h  Stack.h
cpp/templates/2_classes/src/: Main.cpp
